Issue 3889 (Map highlighter doesn't allow overlapping areas) http://code.google.com/p/fbug/issues/detail?id=3889
http://code.google.com/p/fbug/source/detail?r=8908

--- a/extension/content/firebug/highlighter.css
+++ b/extension/content/firebug/highlighter.css
@@ -30,7 +30,6 @@
 /**actual styling to be modified by firebug theme**/
 .firebugCanvas {
     display: none !important;
-    pointer-events: auto !important;
 }
 
 .firebugFrameHighlighter {
